--- a/index.html
+++ b/index.html
@@ -71,14 +71,19 @@
         </p>
     </section>
 
-    <section id="feminismo hoy">
-        <h2>Feminismo hoy</h2>
-        <p>
-            Una mirada al feminismo en la actualidad, los debates presentes, los retos sociales y políticos,
-			y las reivindicaciones que siguen vigentes.
-        </p>
-    </section>
+	<section id="feminismo-hoy">
+    <h2>Feminismo hoy</h2>
 
+    <div class="imagen-centrada">
+        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/descarga.jpg" alt="Feminismo hoy">
+    </div>
+
+    <p>
+        Una mirada al feminismo en la actualidad, los debates presentes, los retos sociales y políticos,
+        y las reivindicaciones que siguen vigentes.
+    </p>
+</section>
+    
     <section id="datos y estadísticas">
         <h2>Datos y estadísticas</h2>
         <p>
@@ -100,3 +105,4 @@
 </body>
 
 </html>
+
