--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 	<section id="feminismo-hoy">
     <h2>Feminismo hoy</h2>
 
+    <!-- Contenedor centrado -->
     <div class="imagen-centrada">
         <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/descarga.jpg" alt="Feminismo hoy">
     </div>
@@ -105,4 +106,5 @@
 </body>
 
 </html>
+
 
