--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
@@ -60,7 +60,7 @@
         #JusticiaSocial</a>
         #NoEsNo</a>
         #AlzamosLaVoz</a>
-		<a href="https://github.com/astrobach055-sys/Vera/blob/main/im%C3%A1genes/descarga.jpg" target="_blank">#FeminismoHoy</a>
+		<a href="https://github.com/astrobach055-sys/Vera/imágenes/descarga.jpg" target="_blank">#FeminismoHoy</a>
     </nav>
 
     <section id="historia">
@@ -106,6 +106,7 @@
 </body>
 
 </html>
+
 
 
 
