--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 
     <section id="historia">
         <h2>Historia</h2>
+		 <!-- Contenedor centrado -->
+    <div class="imagen-centrada">
+        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/historiafoto.jpg" alt="Historia">
+    </div>
         <p>
            Un recorrido por el origen y la evolución del feminismo, sus principales etapas, 
 		   luchas y conquistas que han marcado el camino hacia la igualdad.
@@ -106,6 +110,7 @@
 </body>
 
 </html>
+
 
 
 
