--- a/index.html
+++ b/index.html
@@ -62,19 +62,18 @@
         #AlzamosLaVoz</a>
 		<a href="https://github.com/astrobach055-sys/Vera/imágenes/descarga.jpg" target="_blank">#FeminismoHoy</a>
     </nav>
-
-    <section id="historia">
-        <h2>Historia</h2>
-		 <!-- Contenedor centrado -->
+<section id="historia">
+    <h2>Historia</h2>
+     <!-- Contenedor centrado -->
     <div class="imagen-centrada">
-        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/historiafoto.jpg" alt="Historia">
+        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/historiafoto.jpg" alt="Historia" width="300">
     </div>
-        <p>
-           Un recorrido por el origen y la evolución del feminismo, sus principales etapas, 
-		   luchas y conquistas que han marcado el camino hacia la igualdad.
-        </p>
-    </section>
-
+    <p>
+       Un recorrido por el origen y la evolución del feminismo, sus principales etapas, 
+       luchas y conquistas que han marcado el camino hacia la igualdad.
+    </p>
+</section>
+    
 	<section id="feminismo-hoy">
     <h2>Feminismo hoy</h2>
 
@@ -110,6 +109,7 @@
 </body>
 
 </html>
+
 
 
 
