--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
     
     <section id="datos y estadísticas">
         <h2>Datos y estadísticas</h2>
+		    <!-- Contenedor centrado -->
+    <div class="imagen-centrada">
+        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/datos.jpg" alt="Datos y estadísticas">
+    </div>
         <p>
             Cifras y estudios que muestran la realidad de la desigualdad de género, 
 			ayudando a entender el impacto del machismo en distintos ámbitos.
@@ -109,6 +113,7 @@
 </body>
 
 </html>
+
 
 
 
