--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 
     <section id="educación y recursos">
         <h2>Educación y recursos</h2>
+		  <!-- Contenedor centrado -->
+    <div class="imagen-centrada">
+        <img src="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/educación.jpg" alt="Feminismo hoy">
+    </div>
         <p>Materiales, lecturas y herramientas para informarse, aprender y profundizar en el feminismo desde una perspectiva crítica y accesible.
 		Puedes visitar este periódico feminista para más información: <strong>https://www.mujeresenred.net/</strong></p>
     </section>
@@ -113,6 +117,7 @@
 </body>
 
 </html>
+
 
 
 
