--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
         <p>Materiales, lecturas y herramientas para informarse, aprender y profundizar en el feminismo desde una perspectiva crítica y accesible.
 		Puedes visitar este periódico feminista para más información: <strong>https://www.mujeresenred.net/</strong></p>
     </section>
-
+<section id="juego">
+        <h2>Juego</h2>
+		
+    
+      
+    </section>
     <footer>
         © 2026 - Web dedicada al feminismo
     </footer>
@@ -117,6 +122,7 @@
 </body>
 
 </html>
+
 
 
 
