--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <section id="juego">
         <h2>Juego</h2>
 		
-    
+    <iframe src="juego/ruleta.html" style="width:100%; height:500px; border:none; border-radius:8px;"></iframe>
       
     </section>
     <footer>
@@ -122,6 +122,7 @@
 </body>
 
 </html>
+
 
 
 
