--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         #JusticiaSocial</a>
         #NoEsNo</a>
         #AlzamosLaVoz</a>
-		<a href="https://github.com/astrobach055-sys/Vera/imágenes/descarga.jpg" target="_blank">#FeminismoHoy</a>
+		<a href="https://raw.githubusercontent.com/astrobach055-sys/Vera/main/imágenes/descarga.jpg" target="_blank">#FeminismoHoy</a>
+		
     </nav>
 <section id="historia">
     <h2>Historia</h2>
@@ -134,6 +135,7 @@ s0.parentNode.insertBefore(s1,s0);
 </body>
 
 </html>
+
 
 
 
