--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             color: #eee;
             margin-top: 40px;
         }
+		.imagen-centrada {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.imagen-centrada img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
     </style>
 </head>
 
@@ -135,6 +145,7 @@ s0.parentNode.insertBefore(s1,s0);
 </body>
 
 </html>
+
 
 
 
